# cmpe-491

./: README.md  previous_1.0.ipynb  previous_2.0.ipynb  previous_3.0.ipynb  prostate_cancer_tabular_1.0.ipynb  pyproject.toml  syn_1.0.ipynb  vae_1.0.ipynb
notebooks/augmentation/: all.ipynb  cgan_1.0.ipynb  ddpm_1.0.ipynb  syn_1.0.ipynb  syn_2.0_nn_cohort.ipynb  syn_2.0_nn_seer.ipynb  syn_2.0_svm_cohort.ipynb  syn_2.0_svm_seer.ipynb  syn_3.0.ipynb  vae_1.0.ipynb  vae_2.0.ipynb
notebooks/misc/: prostate_cancer_tabular_1.0.ipynb
notebooks/previous/: README.md  previous_1.0.ipynb  previous_2.0.ipynb  previous_3.0.ipynb
