[project]
name = "cmpe-491"
version = "0.1.0"
description = "CMPE 491 Project"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jupyterlab>=4.4.4",
  "torch",
  "torchvision",
  "pandas-stubs==2.3.2.250926",
  "ipywidgets>=8.1.7",
  "numpy>=2.3.4",
  "polars>=1.34.0",
  "kaggle>=1.7.4.5",
  "ruff>=0.14.1",
  "matplotlib>=3.10.7",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "opencv-python>=4.11.0.86",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "F", "E", "W"]
