[project]
name = "cmpe-491"
version = "0.1.0"
description = "CMPE 491 Project"
requires-python = ">=3.13,<3.14"
dependencies = [
  "jupyterlab>=4.4.10",
  "torch",
  "torchvision",
  "pandas-stubs==2.3.2.250926",
  "ipywidgets>=8.1.8",
  "numpy>=2.3.4",
  "polars>=1.35.1",
  "kaggle>=1.7.4.5",
  "ruff>=0.14.3",
  "matplotlib>=3.10.7",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "F", "E", "W"]
