[project]
name = "cmpe-491"
version = "0.1.0"
description = "CMPE 491 Project"
requires-python = ">=3.13, <3.14"
dependencies = [
  "jupyterlab>=4.5.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "pandas-stubs>=2.3.3.251201",
  "ipywidgets>=8.1.8",
  "numpy>=2.3.5",
  "polars>=1.36",
  "kaggle>=1.8.2",
  "ruff>=0.14.8",
  "matplotlib>=3.10.7",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "xgboost>=3.1.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "F", "E", "W"]
